# kinetic-build

./: .clang-format  .gitignore  CMakeLists.txt  kinetic.kn
src/: build.c  compile.c  compile.h  defer.h  dependencies.c  dependencies.h  directory.c  directory.h  file_ops.h  link.c  link.h  project_definition.c  project_definition.h
